Update February and March 2022 metrics

--- a/01-calculation.ipynb
+++ b/01-calculation.ipynb
@@ -11,19 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using wmfdata v1.3.1, but v1.3.2 is available.\n",
-      "\n",
-      "To update, run `pip install --upgrade git+https://github.com/wikimedia/wmfdata-python.git@release --ignore-installed`.\n",
-      "\n",
-      "To see the changes, refer to https://github.com/wikimedia/wmfdata-python/blob/release/CHANGELOG.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from functools import reduce\n",
     "from pathlib import Path\n",
@@ -32,7 +20,7 @@
     "\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from wmfdata import hive,spark\n",
+    "from wmfdata import hive, spark\n",
     "from wmfdata.utils import print_err, pd_display_all"
    ]
   },
@@ -56,8 +44,7 @@
     "last_month = datetime.date.today().replace(day=1) - datetime.timedelta(days=1)\n",
     "\n",
     "METRICS_MONTH_TEXT = last_month.strftime(\"%Y-%m\")\n",
-    "MEDIAWIKI_HISTORY_SNAPSHOT = last_month.strftime(\"%Y-%m\")\n",
-    "\n"
+    "MEDIAWIKI_HISTORY_SNAPSHOT = last_month.strftime(\"%Y-%m\")"
    ]
   },
   {
@@ -69,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,21 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mediawiki_history_snapshot': '2022-01',\n",
-       " 'metrics_month': '2022-01',\n",
-       " 'metrics_month_first_day': '2022-01-01',\n",
-       " 'metrics_month_last_day': '2022-01-31',\n",
+       "{'mediawiki_history_snapshot': '2022-03',\n",
+       " 'metrics_month': '2022-03',\n",
+       " 'metrics_month_first_day': '2022-03-01',\n",
+       " 'metrics_month_last_day': '2022-03-31',\n",
        " 'metrics_year': 2022,\n",
-       " 'metrics_cur_month': 1}"
+       " 'metrics_cur_month': 3}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,22 +118,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MariaDB and Hive query metrics\n"
+    "# Query metrics\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running structured_data_used on hive...\n",
-      "Running num_commons_files_used_content_pages on hive...\n",
-      "Running wikidata_items on hive...\n",
-      "Running wikidata_items_being_reused on hive...\n"
+      "Running structured_data_used on spark...\n",
+      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        month  structured_data_used\n",
+      "0  2022-03-01             127991760\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running wikidata_items on spark...\n",
+      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        month  wikidata_items\n",
+      "0  2022-03-01        96647383\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running wikidata_items_being_reused on spark...\n",
+      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        month  wikidata_items_being_reused\n",
+      "0  2022-03-01                     20647318\n"
      ]
     }
    ],
@@ -154,20 +181,16 @@
     "queries = {\n",
     "    \"structured_data_used\": {\n",
     "        \"file\": \"queries/structured_data_used.hql\",\n",
-    "        \"engine\": \"hive\"\n",
+    "        \"engine\": \"spark\"\n",
     "    },\n",
     "    \n",
-    "    \"num_commons_files_used_content_pages\": {\n",
-    "        \"file\": \"queries/num_commons_files.hql\",\n",
-    "        \"engine\": \"hive\"\n",
-    "    },\n",
     "    \"wikidata_items\": {\n",
     "        \"file\": \"queries/wikidata_items.hql\",\n",
-    "        \"engine\": \"hive\"\n",
+    "        \"engine\": \"spark\"\n",
     "    },\n",
     "    \"wikidata_items_being_reused\": {\n",
     "        \"file\": \"queries/wikidata_items_being_reused.hql\",\n",
-    "        \"engine\": \"hive\"\n",
+    "        \"engine\": \"spark\"\n",
     "    }\n",
     "       \n",
     "}\n",
@@ -180,8 +203,9 @@
     "    \n",
     "    if engine == \"mariadb\":\n",
     "        result = mariadb.run(query)\n",
-    "    elif engine == \"hive\":\n",
-    "        result = hive.run(query)\n",
+    "    elif engine == \"spark\":\n",
+    "        result = spark.run(query)\n",
+    "        print(result)\n",
     "    else:\n",
     "        raise ValueError(\"Unknown engine specified.\") \n",
     "    \n",
@@ -191,7 +215,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\"num_commons_files_used_content_pages\": {\n",
+    "#        \"file\": \"queries/num_commons_files.hql\",\n",
+    "#        \"engine\": \"spark\"\n",
+    "#    },\n",
+    "\n",
+    "\n",
+    "\n",
+    "num_commons_files_used_content_pages = spark.run(\"\"\" \n",
+    "\n",
+    "WITH\n",
+    "\n",
+    "    wiki_content_namespaces as (\n",
+    "        select\n",
+    "            dbname,\n",
+    "            namespace\n",
+    "        FROM\n",
+    "            wmf_raw.mediawiki_project_namespace_map\n",
+    "        WHERE\n",
+    "            namespace_is_content = 1\n",
+    "            AND snapshot = '2022-03'\n",
+    "    )\n",
+    "\n",
+    "   \n",
+    "        SELECT\n",
+    "            '2022-03-01' AS month,\n",
+    "            COUNT(DISTINCT il_to) AS num_commons_files_used_content_pages\n",
+    "        FROM\n",
+    "            wmf_raw.mediawiki_imagelinks as m\n",
+    "            INNER JOIN wiki_content_namespaces AS ns\n",
+    "                ON ( ns.namespace = m.il_from_namespace)\n",
+    "                AND ns.dbname = m.wiki_db\n",
+    "        WHERE\n",
+    "            m.snapshot = '2022-03'\n",
+    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -216,31 +291,86 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>month</th>\n",
-       "      <th>wikidata_items_being_reused</th>\n",
+       "      <th>num_commons_files_used_content_pages</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-01-01</td>\n",
-       "      <td>20266273</td>\n",
+       "      <td>2022-03-01</td>\n",
+       "      <td>37488533</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       month  wikidata_items_being_reused\n",
-       "0 2022-01-01                     20266273"
+       "        month  num_commons_files_used_content_pages\n",
+       "0  2022-03-01                              37488533"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "num_commons_files_used_content_pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>num_commons_files_used_content_pages</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>37124441</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        month  num_commons_files_used_content_pages\n",
+       "0  2022-02-01                              37124441"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#num_commons_files_used_content_pages\n",
+    "test"
    ]
   },
   {
@@ -252,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,155 +393,14 @@
     "new_metrics = reduce(lambda l, r: pd.merge(l, r, how=\"outer\"), results)\n",
     "\n",
     "# Set the month as an index so combine_first works properly\n",
-    "new_metrics = new_metrics.set_index(\"month\").sort_index()\n"
+    "new_metrics = new_metrics.set_index(\"month\").sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>structured_data_used</th>\n",
-       "      <th>num_commons_files_used_content_pages</th>\n",
-       "      <th>wikidata_items</th>\n",
-       "      <th>wikidata_items_being_reused</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-04-01</th>\n",
-       "      <td>115768032.0</td>\n",
-       "      <td>32439596.0</td>\n",
-       "      <td>93039049.0</td>\n",
-       "      <td>19175909.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-05-01</th>\n",
-       "      <td>117023506.0</td>\n",
-       "      <td>33188319.0</td>\n",
-       "      <td>93295754.0</td>\n",
-       "      <td>19272296.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-06-01</th>\n",
-       "      <td>117956153.0</td>\n",
-       "      <td>33484828.0</td>\n",
-       "      <td>93525712.0</td>\n",
-       "      <td>19379045.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07-01</th>\n",
-       "      <td>118873343.0</td>\n",
-       "      <td>33853754.0</td>\n",
-       "      <td>93808863.0</td>\n",
-       "      <td>19464104.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-08-01</th>\n",
-       "      <td>120411293.0</td>\n",
-       "      <td>35339547.0</td>\n",
-       "      <td>94347261.0</td>\n",
-       "      <td>19540328.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-09-01</th>\n",
-       "      <td>121413643.0</td>\n",
-       "      <td>35748687.0</td>\n",
-       "      <td>94646283.0</td>\n",
-       "      <td>19640044.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-10-01</th>\n",
-       "      <td>123036144.0</td>\n",
-       "      <td>36017280.0</td>\n",
-       "      <td>95086219.0</td>\n",
-       "      <td>19801319.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>123918750.0</td>\n",
-       "      <td>36208503.0</td>\n",
-       "      <td>95420570.0</td>\n",
-       "      <td>20031718.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-01</th>\n",
-       "      <td>124842611.0</td>\n",
-       "      <td>36843454.0</td>\n",
-       "      <td>95826220.0</td>\n",
-       "      <td>20161422.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-01</th>\n",
-       "      <td>125887906.0</td>\n",
-       "      <td>37096017.0</td>\n",
-       "      <td>96153653.0</td>\n",
-       "      <td>20266273.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            structured_data_used  num_commons_files_used_content_pages  \\\n",
-       "month                                                                    \n",
-       "2021-04-01  115768032.0           32439596.0                             \n",
-       "2021-05-01  117023506.0           33188319.0                             \n",
-       "2021-06-01  117956153.0           33484828.0                             \n",
-       "2021-07-01  118873343.0           33853754.0                             \n",
-       "2021-08-01  120411293.0           35339547.0                             \n",
-       "2021-09-01  121413643.0           35748687.0                             \n",
-       "2021-10-01  123036144.0           36017280.0                             \n",
-       "2021-11-01  123918750.0           36208503.0                             \n",
-       "2021-12-01  124842611.0           36843454.0                             \n",
-       "2022-01-01  125887906.0           37096017.0                             \n",
-       "\n",
-       "            wikidata_items  wikidata_items_being_reused  \n",
-       "month                                                    \n",
-       "2021-04-01  93039049.0      19175909.0                   \n",
-       "2021-05-01  93295754.0      19272296.0                   \n",
-       "2021-06-01  93525712.0      19379045.0                   \n",
-       "2021-07-01  93808863.0      19464104.0                   \n",
-       "2021-08-01  94347261.0      19540328.0                   \n",
-       "2021-09-01  94646283.0      19640044.0                   \n",
-       "2021-10-01  95086219.0      19801319.0                   \n",
-       "2021-11-01  95420570.0      20031718.0                   \n",
-       "2021-12-01  95826220.0      20161422.0                   \n",
-       "2022-01-01  96153653.0      20266273.0                   "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if old_metrics is None:\n",
     "    metrics = new_metrics\n",
@@ -423,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
