--- a/02-report.ipynb
+++ b/02-report.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using wmfdata v1.3.1, but v1.3.2 is available.\n",
-      "\n",
-      "To update, run `pip install --upgrade git+https://github.com/wikimedia/wmfdata-python.git@release --ignore-installed`.\n",
-      "\n",
-      "To see the changes, refer to https://github.com/wikimedia/wmfdata-python/blob/release/CHANGELOG.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from functools import reduce\n",
     "\n",
@@ -43,238 +31,6 @@
    "source": [
     "FILE = \"metrics/metrics.tsv\"\n",
     "metrics = pd.read_csv(FILE, sep=\"\\t\", parse_dates=[\"month\"]).set_index(\"month\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>structured_data_used</th>\n",
-       "      <th>num_commons_files_used_content_pages</th>\n",
-       "      <th>wikidata_items</th>\n",
-       "      <th>wikidata_items_being_reused</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-07-01</th>\n",
-       "      <td>102540679.0</td>\n",
-       "      <td>33182261.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-01</th>\n",
-       "      <td>104565582.0</td>\n",
-       "      <td>33576054.0</td>\n",
-       "      <td>88776242.0</td>\n",
-       "      <td>18390627.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>105631168.0</td>\n",
-       "      <td>33815277.0</td>\n",
-       "      <td>89386201.0</td>\n",
-       "      <td>18472082.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-10-01</th>\n",
-       "      <td>106729592.0</td>\n",
-       "      <td>32666244.0</td>\n",
-       "      <td>90190671.0</td>\n",
-       "      <td>18549227.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-11-01</th>\n",
-       "      <td>108116779.0</td>\n",
-       "      <td>31481821.0</td>\n",
-       "      <td>90821857.0</td>\n",
-       "      <td>18673974.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-01</th>\n",
-       "      <td>109284793.0</td>\n",
-       "      <td>30628535.0</td>\n",
-       "      <td>91480812.0</td>\n",
-       "      <td>18782123.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-01</th>\n",
-       "      <td>110336427.0</td>\n",
-       "      <td>30922629.0</td>\n",
-       "      <td>91898784.0</td>\n",
-       "      <td>18890176.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-01</th>\n",
-       "      <td>111537756.0</td>\n",
-       "      <td>31236223.0</td>\n",
-       "      <td>92346206.0</td>\n",
-       "      <td>18961132.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-01</th>\n",
-       "      <td>113749241.0</td>\n",
-       "      <td>31994067.0</td>\n",
-       "      <td>92766054.0</td>\n",
-       "      <td>19081836.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-04-01</th>\n",
-       "      <td>115768032.0</td>\n",
-       "      <td>32439596.0</td>\n",
-       "      <td>93039049.0</td>\n",
-       "      <td>19175909.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-05-01</th>\n",
-       "      <td>117023506.0</td>\n",
-       "      <td>33188319.0</td>\n",
-       "      <td>93295754.0</td>\n",
-       "      <td>19272296.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-06-01</th>\n",
-       "      <td>117956153.0</td>\n",
-       "      <td>33484828.0</td>\n",
-       "      <td>93525712.0</td>\n",
-       "      <td>19379045.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07-01</th>\n",
-       "      <td>118873343.0</td>\n",
-       "      <td>33853754.0</td>\n",
-       "      <td>93808863.0</td>\n",
-       "      <td>19464104.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-08-01</th>\n",
-       "      <td>120411293.0</td>\n",
-       "      <td>35339547.0</td>\n",
-       "      <td>94347261.0</td>\n",
-       "      <td>19540328.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-09-01</th>\n",
-       "      <td>121413643.0</td>\n",
-       "      <td>35748687.0</td>\n",
-       "      <td>94646283.0</td>\n",
-       "      <td>19640044.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-10-01</th>\n",
-       "      <td>123036144.0</td>\n",
-       "      <td>36017280.0</td>\n",
-       "      <td>95086219.0</td>\n",
-       "      <td>19801319.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>123918750.0</td>\n",
-       "      <td>36208503.0</td>\n",
-       "      <td>95420570.0</td>\n",
-       "      <td>20031718.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-01</th>\n",
-       "      <td>124842611.0</td>\n",
-       "      <td>36843454.0</td>\n",
-       "      <td>95826220.0</td>\n",
-       "      <td>20161422.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-01</th>\n",
-       "      <td>125887906.0</td>\n",
-       "      <td>37096017.0</td>\n",
-       "      <td>96153653.0</td>\n",
-       "      <td>20266273.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            structured_data_used  num_commons_files_used_content_pages  \\\n",
-       "month                                                                    \n",
-       "2020-07-01           102540679.0                            33182261.0   \n",
-       "2020-08-01           104565582.0                            33576054.0   \n",
-       "2020-09-01           105631168.0                            33815277.0   \n",
-       "2020-10-01           106729592.0                            32666244.0   \n",
-       "2020-11-01           108116779.0                            31481821.0   \n",
-       "2020-12-01           109284793.0                            30628535.0   \n",
-       "2021-01-01           110336427.0                            30922629.0   \n",
-       "2021-02-01           111537756.0                            31236223.0   \n",
-       "2021-03-01           113749241.0                            31994067.0   \n",
-       "2021-04-01           115768032.0                            32439596.0   \n",
-       "2021-05-01           117023506.0                            33188319.0   \n",
-       "2021-06-01           117956153.0                            33484828.0   \n",
-       "2021-07-01           118873343.0                            33853754.0   \n",
-       "2021-08-01           120411293.0                            35339547.0   \n",
-       "2021-09-01           121413643.0                            35748687.0   \n",
-       "2021-10-01           123036144.0                            36017280.0   \n",
-       "2021-11-01           123918750.0                            36208503.0   \n",
-       "2021-12-01           124842611.0                            36843454.0   \n",
-       "2022-01-01           125887906.0                            37096017.0   \n",
-       "\n",
-       "            wikidata_items  wikidata_items_being_reused  \n",
-       "month                                                    \n",
-       "2020-07-01             NaN                          NaN  \n",
-       "2020-08-01      88776242.0                   18390627.0  \n",
-       "2020-09-01      89386201.0                   18472082.0  \n",
-       "2020-10-01      90190671.0                   18549227.0  \n",
-       "2020-11-01      90821857.0                   18673974.0  \n",
-       "2020-12-01      91480812.0                   18782123.0  \n",
-       "2021-01-01      91898784.0                   18890176.0  \n",
-       "2021-02-01      92346206.0                   18961132.0  \n",
-       "2021-03-01      92766054.0                   19081836.0  \n",
-       "2021-04-01      93039049.0                   19175909.0  \n",
-       "2021-05-01      93295754.0                   19272296.0  \n",
-       "2021-06-01      93525712.0                   19379045.0  \n",
-       "2021-07-01      93808863.0                   19464104.0  \n",
-       "2021-08-01      94347261.0                   19540328.0  \n",
-       "2021-09-01      94646283.0                   19640044.0  \n",
-       "2021-10-01      95086219.0                   19801319.0  \n",
-       "2021-11-01      95420570.0                   20031718.0  \n",
-       "2021-12-01      95826220.0                   20161422.0  \n",
-       "2022-01-01      96153653.0                   20266273.0  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metrics"
    ]
   },
   {
@@ -344,41 +100,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>month</th>\n",
-       "      <th>2022-01-01 00:00:00</th>\n",
+       "      <th>2022-03-01 00:00:00</th>\n",
        "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>structured_data_used</th>\n",
-       "      <td>125887906.0</td>\n",
-       "      <td>0.446987</td>\n",
+       "      <td>127991760.0</td>\n",
+       "      <td>0.471170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_commons_files_used_content_pages</th>\n",
-       "      <td>37096017.0</td>\n",
-       "      <td>0.188975</td>\n",
+       "      <td>37488533.0</td>\n",
+       "      <td>0.201556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items</th>\n",
-       "      <td>96153653.0</td>\n",
+       "      <td>96647383.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wikidata_items_being_reused</th>\n",
-       "      <td>20266273.0</td>\n",
-       "      <td>0.210770</td>\n",
+       "      <td>20647318.0</td>\n",
+       "      <td>0.213636</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "month                                 2022-01-01 00:00:00    status\n",
-       "structured_data_used                          125887906.0  0.446987\n",
-       "num_commons_files_used_content_pages           37096017.0  0.188975\n",
-       "wikidata_items                                 96153653.0       NaN\n",
-       "wikidata_items_being_reused                    20266273.0  0.210770"
+       "month                                 2022-03-01 00:00:00    status\n",
+       "structured_data_used                          127991760.0  0.471170\n",
+       "num_commons_files_used_content_pages           37488533.0  0.201556\n",
+       "wikidata_items                                 96647383.0       NaN\n",
+       "wikidata_items_being_reused                    20647318.0  0.213636"
       ]
      },
      "execution_count": 7,
@@ -387,6 +143,96 @@
     }
    ],
    "source": [
+    "#March\n",
+    "new_metrics"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "new_metrics = metrics.iloc[[-2]].transpose().reindex(report_order).fillna(\"—\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "new_metrics.at['structured_data_used','status'] =  new_metrics.iloc[0][0]/87000000-1\n",
+    "new_metrics.at['num_commons_files_used_content_pages','status'] = new_metrics.iloc[1][0]/31200000-1\n",
+    "new_metrics.at['wikidata_items_being_reused','status'] = new_metrics.iloc[3][0]/new_metrics.iloc[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>month</th>\n",
+       "      <th>2022-02-01 00:00:00</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>structured_data_used</th>\n",
+       "      <td>127025510.0</td>\n",
+       "      <td>0.460063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_commons_files_used_content_pages</th>\n",
+       "      <td>37124441.0</td>\n",
+       "      <td>0.189886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wikidata_items</th>\n",
+       "      <td>96332960.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wikidata_items_being_reused</th>\n",
+       "      <td>20548393.0</td>\n",
+       "      <td>0.213306</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "month                                 2022-02-01 00:00:00    status\n",
+       "structured_data_used                          127025510.0  0.460063\n",
+       "num_commons_files_used_content_pages           37124441.0  0.189886\n",
+       "wikidata_items                                 96332960.0       NaN\n",
+       "wikidata_items_being_reused                    20548393.0  0.213306"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#February\n",
     "new_metrics"
    ]
   },
@@ -399,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,20 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "scope = ['https://spreadsheets.google.com/feeds',\n",
     "         'https://www.googleapis.com/auth/drive']\n",
     "\n",
-    "credentials = Credentials.from_service_account_file('big-mender-274521-324384a764e2.json', scopes=scope)\n",
+    "credentials = Credentials.from_service_account_file('key-metrics-343717-07427b76df93.json', scopes=scope)\n",
     "gc = gspread.authorize(credentials)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,22 +289,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       " 'tableRange': 'Sheet1!A1:E20',\n",
+       " 'tableRange': 'Sheet1!A1:E22',\n",
        " 'updates': {'spreadsheetId': '12pI5UtJ9QBsFWxVjmRVJj6bBdwk_bwxFPmS-APLSQL4',\n",
-       "  'updatedRange': 'Sheet1!A21:E21',\n",
+       "  'updatedRange': 'Sheet1!A23:E23',\n",
        "  'updatedRows': 1,\n",
        "  'updatedColumns': 5,\n",
        "  'updatedCells': 5}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
